app/styles/components/_pages/_page-home.scss
/**
*
* Home Page Styles
*
**/





// General

section {
  box-shadow: 0 -0.1rem 0.25rem rgba(0, 0, 0, 0.2) inset;
  text-align: center;
  padding: 4rem 1.5rem;
  * {
	z-index: 2;
  }
}

img.sit {
  margin-bottom: -4rem;
}




// Hero Styles

.home-hero {
  background-color: $brand_color-dkblue;
  background-image: url('../images/heroBG.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  width: 100%;
  color: #fff;
  font-weight: bold;
  text-align: center;
  padding-bottom: 10rem;
  h1 {
    text-align: center;
	background-color: rgba($brand-color-dkblue, 0.75);
	padding: 1rem 0 1.5rem;
	margin: 2rem -1.5rem 0;
	border: 1px solid rgba(255,255,255, 0.1);
	border-left: 0;
	border-right: 0;
	color: $brand_color-ltblue;
	font-size: 3rem;
	font-weight: bold;
	.wordbreak {
	  display: block;
	}
  }
  h2 {
    text-align: center;
	opacity: 0.75;
	font-size: 2rem;
  }
}

.blue-line {
  position: relative;
  display: inline-block;
  text-align: center;
  height: 2px;
  width: 75px;
  margin: 1.5rem 0 1rem;
  background-color: $brand_color-ltblue;
}





// Info Section

.info-section {
  background-color: #1b3644;
  h2 {
    color: white;
	margin-bottom: 3rem;
  }
  p {
    color: $brand_color-ltblue;
    padding: 0 0 3rem;
	margin: 0 auto;
	max-width: 400px;
  }
}





// Video Section

.video-section {
  background-color: $brand_color-grey;
  background-image: url("../images/lineBG.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  h2 {
    color: white;
  }
  .pitchVid {
    border-top: 1px solid rgba($brand_color-blueGrey1, 0.1);
    background: url("../../images/basic_cover.jpg") no-repeat rgb(12, 19, 26);
    background-size: cover;
    padding: 6rem 0;
    overflow: hidden;
    h3 {
      color: rgba($brand_color-blueGrey1, 0.75);
    }
  }
}
.shareCampaign {
  p {
    color: white;
  }
  .shareButtons {
    width: 290px;
    margin: 0 auto;
    button {
      float: left;
      border: none;
      width: 135px;
      margin-top: 15px;
    }
    .twitter {
      background-color: #4099FF;
      margin-right: 20px;
    }
    .facebook {
      background-color: #3B5998;
    }
  }

}

.appearances {
  .logosHolder {
    display: flex;
    flex-flow: row wrap;
    height: 300px;
    img {
      width: 130px;
      margin: auto;
    }
  }
}





// App Highlight

.appHighlight {
  background-image: url('../images/mobileHighlight.png');
  background-size: cover;
  background-repeat: no-repeat;
  p {
    color: white;
  }
}





// App Benefits

.winLeague {
  background-image: url('../images/leagueBG.png');
  background-size: cover;
  background-repeat: no-repeat;
  h3 {
    color: white;
  }
}





// Cognitive News Demo

.cogNewsDemo {
}





// Footer

footer {
  padding-top: 40px;
  text-align: center;
  background-color: #254E5E;
  .twitter {
    margin-right: 20px;
  }
  p {
    color: white;
  }
  span {
    font-size: 10px;
    color: white;
  }
}




// Helpers

.embed-responsive, iframe {
  -webkit-border-radius: 0.5rem;
  -moz-border-radius: 0.5rem;
  border-radius: 0.5rem;
}
.embed-responsive {
  position: relative;
  display: block;
  height: 0;
  padding: 0;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  border: 0;
  box-shadow: 0 0 2rem rgba($brand_color-black, 0.5);
}
.embed-responsive-16by9 {
  padding-bottom: 56.25%;
}

.embed-responsive .embed-responsive-item, .embed-responsive embed, .embed-responsive iframe, .embed-responsive object, .embed-responsive video {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.wordbreak {
  white-space: pre;
}





/** Larger Screens - desktops and tablets **/
@media all and (min-width: 990px) {

  // Padding Tweak
  section:not(.home-hero) {
	padding-left: 4rem;
	padding-right: 4rem;
  }

  // Hero
  .home-hero h1 {
	font-size: 4rem;
  }

  // Image Tweak
  .info-section, .appHighlight {
	img {
	  max-width: 600px;
	}
  }
}

